# custexify

./: .gitignore  CMakeLists.txt  main.cpp
include/: CameraCapture.h  MicrophoneCapture.h  SpeakerOutput.h
src/: CameraCapture.cpp  MicrophoneCapture.cpp  SpeakerOutput.cpp
